# logger-python

./: .editorconfig  .env  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  API.md  API.rst  CHANGELOG.rst  CONTRIBUTING.md  DESCRIPTIONS.md  LICENSE  LICENSE.md  LICENSE.txt  MANIFEST.in  Makefile  NOTICES.md  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  test_base_logger.py  test_helper.py  test_http_logger.py  test_http_logger_json.py  test_http_logger_rules.py  test_http_logger_schema.py  test_http_message.py  test_http_request_impl.py  test_http_response_impl.py  test_http_rules.py  test_schema1.txt  test_usage_loggers.py  tox.ini
.github/workflows/: crossplatform_tests.yaml  pytest.yml
resurfaceio_logger/: __init__.py  base_logger.py  http_message.py
spec/: base_logger_spec.py  usage_loggers_spec.py
tests/: __init__.py  test_base_logger.py  test_concurrent_submissions.py  test_connection_pooling.py  test_helper.py  test_http_logger.py  test_http_logger_rules.py  test_http_message.py  test_http_request_impl.py  test_http_response_impl.py  test_http_rules.py  test_rules3.txt  test_usage_loggers.py
usagelogger/: __init__.py  _waf.py  aiohttp.py  base_logger.py  django.py  flask.py  http_logger.py  http_logger_for_django.py  http_message.py  http_request_impl.py  http_response_impl.py  http_rule.py  http_rules.py  resurface.py  tornado.py  usage_loggers.py  warnings_utils.py
usagelogger/artifacts/: classifier.pkl
usagelogger/middleware/: aiohttp.py  django.py  fastapi.py  flask.py
(+12 files in other folders)
